resources/deployments.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: metube
  namespace: metube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metube
  template:
    metadata:
      labels:
        app: metube
    spec:
      dnsConfig:
        nameservers:
        - 192.168.1.8
      dnsPolicy: None
      containers:
        - name: metube
          image: ghcr.io/alexta69/metube:2026.09.25
          imagePullPolicy: IfNotPresent
          ports:
            - name: metube
              containerPort: 8081
          volumeMounts:
            - name: media
              mountPath: /media
            - name: refresh
              mountPath: /refresh
          resources: {}
          readinessProbe:
            tcpSocket:
              port: metube
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: metube
            initialDelaySeconds: 15
            periodSeconds: 20
      volumes:
        - name: refresh
          configMap:
            name: refresh-jellyfin
            defaultMode: 0555
        - name: media
          nfs:
            path: /volume1/media
            server: 192.168.1.21
