resources/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: metube
  namespace: metube
spec:
  type: ClusterIP
  ports:
  - port: 8081
    targetPort: metube
    protocol: TCP
    name: metube
  selector:
    app: metube
