resources/ingresses.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metube
  annotations:
    external-dns.alpha.kubernetes.io/hostname: metube.crt.house
    nginx.org/websocket-services: metube
spec:
  ingressClassName: nginx-internal
  rules:
    - host: "metube.crt.house"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: metube
                port:
                  number: 8081
  tls:
    - hosts:
      - metube.crt.house
